Removed cursor: pointer

--- a/back/pages/main/index.html
+++ b/back/pages/main/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Lore</title>
-  <base href="/main/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -20,8 +20,8 @@
     gtag('js', new Date());
     gtag('config', 'UA-126879157-2');
   </script>
-<link rel="stylesheet" href="styles.cadb80e89015a4ccafe5.css"></head>
+<link rel="stylesheet" href="styles.eed9ad5ccd287cbffa57.css"></head>
 <body>
   <app-root></app-root>
-<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.3e9c037db40f529ae461.js"></script></body>
+<script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.c6871e56cb80756a5498.js"></script><script type="text/javascript" src="main.6248e17a6dda48cc7178.js"></script></body>
 </html>
